--- a/gpt.ipynb
+++ b/gpt.ipynb
@@ -8,7 +8,7 @@
       },
       "outputs": [],
       "source": [
-        "# We always start with a dataset to train on. Let's download the tiny shakespeare dataset\n",
+        "Name - Puspendra Kumar (21CH10046) \n # We always start with a dataset to train on. Let's download the tiny shakespeare dataset\n",
         "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt"
       ]
     },
